partie1/env_var_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-var-pod
spec:
  containers:
  - name: env-busybox
    image: busybox
    command: ['sh', '-c', 'echo "Username: $USERNAME" && sleep 99999']
