partie1/pod_with_secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-secret
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'ls -al /secret && echo "Username: $SECRET_USERNAME" && sleep 99999']
    volumeMounts:
    - name: secret-volume
      mountPath: "/secret"
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: 42-secret
